Handlebars ok con estilos

--- a/Handlebars/public/index.html
+++ b/Handlebars/public/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!--Mi hoja de estilos-->
-    <!--<link rel="stylesheet" type="text/css" href="/styles/common.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="/styles/index.css">-->
   </head>
   <body>
 
@@ -29,32 +29,10 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Acerca de nosotros<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../pages/merchandise.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                        Productos y servicios
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                        <li><a class="dropdown-item" href="../productos">Electrodomésticos</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Bazar</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Muebles</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Envíos</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Servicios</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Contactenos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="" tabindex="-1" aria-disabled="true">Proveedores</a>
+                        <a class="nav-link" href="../productos">Productos<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +47,7 @@
           <input class="FormItem" type="number" name="price"> 
           <label class="FormItem" for="email">SRC</label>
           <input class="FormItem" type="url" name="src">
-          <input class="FormItem" type="submit" value="Enviar"/>            
+          <input class="btn btn-primary" type="submit" value="Enviar"/>            
       </fieldset>
   </form>
     <footer class="aboutusFooter footer"><!--bloque 4 BEM-->
