--- a/PUG/public/index.html
+++ b/PUG/public/index.html
@@ -29,37 +29,16 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Acerca de nosotros<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../pages/merchandise.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                        Productos y servicios
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                        <li><a class="dropdown-item" href="../productos">Electrodomésticos</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Bazar</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Muebles</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Envíos</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="../productos">Servicios</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Contactenos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="" tabindex="-1" aria-disabled="true">Proveedores</a>
+                        <a class="nav-link" href="/productos">Productos<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
       </nav> 
     </header>
+
     <form class="formContact" action="/productos/" method="POST">
       <fieldset class="formulario">
           <legend class="formTit">Formulario de ingreso de productos</legend>
@@ -71,7 +50,8 @@
           <input class="FormItem" type="url" name="src">
           <input class="FormItem" type="submit" value="Enviar"/>            
       </fieldset>
-  </form>
+    </form>
+    
     <footer class="aboutusFooter footer"><!--bloque 4 BEM-->
       <p>Copyright © 2021
           DeTito.com™. Todos los derechos reservados.
